Fix dark mode for docs (#5)

--- a/theme/src/_light.scss
+++ b/theme/src/_light.scss
@@ -1,4 +1,4 @@
-:root {
+@mixin light {
   color-scheme: light;
 
   --vue-color-focus: var(--vue-color-focus-light);
@@ -6,13 +6,14 @@
   --vue-color-text-on-primary: var(--vue-color-white);
   --vue-color-surface: var(--vue-color-surface-light);
   --vue-color-border: var(--vue-color-border-light);
+
+  --doc-color-background: var(--color-gray-100);
+}
+
+:root {
+  @include light;
 }
 
 [color-scheme='light'] {
-  color-scheme: light;
-
-  --vue-color-focus: var(--vue-color-focus-light);
-  --vue-color-primary: var(--vue-color-primary-light);
-  --vue-color-surface: var(--vue-color-surface-light);
-  --vue-color-border: var(--vue-color-border-light);
+  @include light;
 }
